Fix dropdown item placement
Dropdown items appeared in the middle of the dropdown button, this
commit moves the items further down to appear under the button.

--- a/src/SidePanel/dropdown/Dropdown.scss
+++ b/src/SidePanel/dropdown/Dropdown.scss
@@ -67,7 +67,7 @@
         color: $white;
         position: absolute;
         width: 100%;
-        top: 32px;
+        top: 48px;
         right: 0;
         padding: 0;
         border-top: solid 2px $gray-600;
